class PaperBook extends Book {
    public PaperBook(String t, String a, String g) { super(t,a,g);} }

class EBook extends Book {
    public EBook(String t, String a, String g) { super(t,a,g);} }

class AudioBook extends Book {
    public AudioBook(String t, String a, String g) { super(t,a,g);} }